--- a/estilos_pk.css
+++ b/estilos_pk.css
@@ -30,8 +30,8 @@ header {
     grid-row: 1;
     text-align: center;
     margin-bottom: 20px;
-    background-color: #5d2c5f6b;
-    color: white;
+    background-color: #2d2c5f6b;
+    color: #91a5bc;
     padding: 20px;
     border-radius: 10px;
 }
@@ -62,24 +62,24 @@ h1 {
 h2 {
     font-size: 1.8em;
     margin-bottom: 10px;
-    color: #ac2272;
+    color: #3022ac;
 }
 
 
 p, li {
     line-height: 1.6; /*espacio entre loneas*/
-    color: #7f8c8d;
+    color: #bebcba;
 }
 
 a {
-    color: #ca46b9;
+    color: #469aca;
     text-decoration: none;
 
 }
 
 a:hover {
     text-decoration: underline; 
-    color: #e8a2f7;
+    color: #a2f1f7;
 }
 
 .container {
@@ -99,9 +99,9 @@ a:hover {
     text-align: justify;
     grid-row: 2 / 3;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 15px;
     padding-bottom: 30px;
-    background-color: #f5f5f521;
+    background-color: #f5f5f507;
     border-radius: 10px;
   
 }
@@ -133,78 +133,33 @@ a:hover {
 }
 
 
-/*otros animes*/
-
-.other-animes {
-    text-align: justify;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.anime {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.459);
-   padding-top: 40px;
-    background-color: #4f2c5f6b;
-    color: white;
-    border-radius: 10px;
-}
-
-.Otros{
-    color: #8C455F;
-    text-align: left;
-    font-size: 35px;
-}
-.container4 a{
-    color: #ffffff;
-}
-
-.container4 .anime h2{
-    color: #140114;
-}
-
-.anime {
-    display: flex;
-    padding: 20px;
-}
-.texto-otros {
-    flex: 1;
-    margin: 30px;
-}
-
-.imagen-otros {
-    flex: 1;
-    width: 100%;
-    height: auto;
-    position: relative;
-    border-radius: 10px;
-}
-
-.imagen-otros img {
-   border-radius: 10px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    object-position: center;
-}
-
-.imagen-otros img:hover{
-  transform: scale(1.025);
-    filter: brightness(110%);
-    box-shadow: #c5b2cf;
-    transition: 2s;
-}
-
-.leer-mas {
-    text-align: right;
-}
 
 
 /*netfliz nana*/
-.anime_net img{
+.anime_net{
+    display: flex;
+    gap: 10px
+    ;
+}
+.netflix img{
     width: 100%;
     object-fit: cover; /* recorta la imagen para cubrir el contenedor */
     object-position: center; /* centra la imagen en el contenedor */
+}
+
+.cuadrado-im img{
+    width: 250px;
+    height: 200px;
+    object-fit: fill; /* recorta la imagen para cubrir el contenedor */
+    object-position: center; /* centra la imagen en el contenedor */
+}
+
+.cuadrado-im{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    width: 200px;
+    height: 200px;
 }
 
 .netflix {
@@ -221,22 +176,36 @@ a:hover {
 .anime_net img:hover{
 transform: scale(1.2);
 transition: 2s;
-filter: grayscale(90%);
+filter: saturate(50%);
 }
 
-.nana_imagen{
-    width: 100%;
+.Paradise_Kiss_imagen{
+    width: 600px;
     height: 200px;
     overflow: hidden; 
     position: relative;
     border-radius: 10px;
 }
-.nana_imagen img{
+.Paradise_Kiss_imagen img{
     width: 100%;
     height: 100%;
-    object-fit: cover; 
-    object-position: center;
+    object-fit: cover;
+    object-position: top; 
    
+   
+}
+
+.Paradise_Kiss_imagen img.top-image {
+    object-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+  
+}
+
+.Paradise_Kiss_imagen:hover .top-image {
+    opacity: 0;
+    transition: 4s;
 }
 
 
@@ -301,102 +270,7 @@ position: relative;
 }
 
 
-/*simulador instagram perfil*/
-.redes-sociales{
-    display: flex;
-    gap: 50px;
-}
-.perfil {
-    display: grid; /*lo quiero como columna*/
-    justify-items: center;
-    text-align: center;
 
-}
-.perfil {
-    background-color: #1a2020;
-    padding: 15px;
-    border-radius: 10px;
-text-align: center;
-max-width: 300px;
-
-}
-.perfil img {
-border-radius: 50%;
-width: 100px;
-height: 100px;
-}
-.perfil h1 {
-font-size: 1.5em;
-margin: 0.5em 0;
-font-weight: 600;
-}
-
-.perfil p {
-margin: 0.5em 0;
-color:#979da1;
-font-weight: 400;
-}
-
-.perfil a {
-color: #0b718a;
-font-weight: 600;
-text-decoration: underline;
-}
-.perfil .follow {
-background-color: #1da1f2;
-color: #fff;
-padding: 0.5em 1em;
-border: none;
-border-radius: 20px;
-cursor: pointer;
-text-decoration: none;
-display: flexbox;
-margin: 0.5em 0;
-}
-
-/*galeria*/
-
-
-
-.galeria{
-    padding: 10px;
-    margin: 5px;
-    border-radius: 5%;
-    background-color: #8d7f8b00;
-}
-
-.galeria h2{
-    color: #8C455F;
-    text-align: center;
-}
-
-.gallery {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 15px;
-}
-
-.gallery-item {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    padding-top: 100%; /*asi se hara cuadrado basandode en la altura*/
-}
-
-.gallery-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.gallery img:hover{
-    transform: scale(1.2);
-    transition: 2s;
-   filter: blur(0.5px);
-}
 
 /*barra de scroll*/::-webkit-scrollbar {
     width: 12px;
@@ -404,14 +278,10 @@ margin: 0.5em 0;
 }
 
 ::-webkit-scrollbar-track {
-    background: #422442; /* Fondo oscuro */
+    background: #553436; /* Fondo oscuro */
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(45deg, #511d77, #123c50); /* Gradiente de morado a rosa magenta */
+    background: linear-gradient(45deg, #4b638d, #272c57); /* Gradiente de morado a rosa magenta */
     border-radius: 6px; /* Bordes redondeados */
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(45deg, #123c50, #511d77); /* Gradiente más oscuro en hover */
 }
